--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ code {
 
 nav {
   box-sizing: border-box;
+  width: 100%;
   height: 70px;
   padding: 20px 40px;
   /* margin-bottom: 1rem; */
